# transcribator

./: .gitignore  README.md  check_ffmpeg.ps1  install.ps1  pyproject.toml  requirements.txt  setup.py  transcribator-web.bat  transcribator.bat  transcribator.json.example
docs/: pyannote-gpu.md
input/: .gitkeep
output/: .gitkeep  test.srt  test.txt  test.vtt  test_clean.txt
tests/: test_backends.py  test_config.py  test_diarization.py  test_exporter.py  test_repository_hygiene.py  test_service.py  test_webapp.py
transcribator/: __init__.py  audio_preparation.py  audio_processor.py  backends.py  cli.py  config.py  contracts.py  diarization.py  exporter.py  service.py  transcriber.py  utils.py  webapp.py
transcribator/templates/: index.html
