[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribator"
version = "0.1.0"
description = "Инструмент для транскрибации видео с использованием OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["whisper", "transcription", "audio", "subtitles"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "openai-whisper>=20231117",
  "click>=8.0.0",
  "tqdm>=4.66.0",
  "librosa>=0.10.0",
  "scipy>=1.10.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
diarization = ["pyannote.audio"]

[project.scripts]
transcribator = "transcribator.cli:main"

[tool.uv]
dev-dependencies = []

