[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribator"
version = "0.1.0"
description = "Video transcription tool based on Whisper with local web UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai-whisper>=20240930",
  "faster-whisper>=1.2.1",
  "ctranslate2>=4.7.0",
  "click>=8.0.0",
  "tqdm>=4.66.0",
  "librosa>=0.10.0",
  "scipy>=1.10.0",
  "numpy>=1.24.0",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.20",
  "pyannote.audio>=4.0.4",
]

[project.scripts]
transcribator = "transcribator.cli:main"
transcribator-web = "transcribator.webapp:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["transcribator*"]

[tool.setuptools.package-data]
transcribator = ["templates/*.html"]
